Added some styling. Begin mapping event broker

--- a/bootstrapper.html
+++ b/bootstrapper.html
@@ -18,16 +18,15 @@ navigation:
    - name: Specifications
      link: bootstrapperspecifications.html		 
 ---
-<h2>
-    <a name="Features"></a>Features<a href="#Features" ></a>
-</h2>
-<ul>
-    <li>The bootstrapper provides a single entry point to startup and shutdown the application.
-    </li>
-    <li>Fluent definition syntax allowing to expressively define the startup and shutdown
-        behavior of the application. </li>
-    <li>Pluggable behaviors which allow to extend the bootstrapping mechanism in AOP like
-        style. </li>
+<h2>Motivation</h2>
+<p>
+Every application goes through start up and shutdown phases. Everything starts really simple. Unfortunately self-made solutions quickly hit the wall due to ever changing business requirements. As a consequence, more services and components need to be introduced into the startup and shutdown mechanism during the software life cycle. The bootstrapper provides you an approved and extendable mechanism for bootstrapping. Put your application and acceptance tests on appcceleration!
+</p>
+<h2>Features</h2>
+<ul class="check dotted">
+    <li>The bootstrapper provides a single entry point to startup and shutdown the application.</li>
+    <li>Fluent definition syntax allowing to expressively define the startup and shutdown behavior of the application. </li>
+    <li>Pluggable behaviors which allow to extend the bootstrapping mechanism in AOP like style. </li>
     <li>ConfigurationSection support with behavior. </li>
     <li>Unobtrusive Key/Value pair configuration section support with behavior. </li>
     <li>Thorough reporting of application startup and shutdown behavior. </li>
@@ -41,53 +40,45 @@ navigation:
     <i>For the specification see the <a href="bootstrapperspecifications.html">
         Specification</a></i>
 </p>
-<h3>
-    <a name="Bootstrapper"></a>Bootstrapper<a href="#Bootstrapper" ></a></h3>
+<h3>Bootstrapper</h3>
 <p>
     When building a new application the bootstrapper is essentially the only root object
     which needs to be instantiated in your application main method. The bootstrapper
     is the central point of your application&#x27;s startup and shutdown behavior.
 </p>
-<h3>
-    <a name="Extensions"></a>Extensions<a href="#Extensions" ></a></h3>
+<h3>Extensions</h3>
 <p>
     Extensions contain methods which are called upon startup and shutdown of the bootstrapper.
     The methods of the extensions are extension points which can consume information
     gathered during the bootstrapping process for example configuration. Extensions
     are added directly on the bootstrapper.
 </p>
-<h3>
-    <a name="Extension_Resolver"></a>Extension Resolver<a href="#Extension_Resolver"
-        ></a></h3>
+<h3>Extension Resolver</h3>
 <p>
     An extension resolver allows to plug in extensions into the bootstrapper. All extensions
     which are resolved by the extension resolver are added after manually added extensions.
 </p>
-<h3>
-    <a name="Behaviors"></a>Behaviors<a href="#Behaviors" ></a></h3>
+<h3>Behaviors</h3>
 <p>
     Behaviors allow to extend the bootstrapping process in an aspect oriented style.
     Behaviors gain access to extensions which are participating in the bootstrapper
     process and can therefore influence them for example by injecting additional runtime
     information into an extension.
 </p>
-<h3>
-    <a name="Strategy"></a>Strategy<a href="#Strategy" ></a></h3>
+<h3>Strategy</h3>
 <p>
     The strategy defines the order of execution for extension points and behaviors.
     The strategy is also the context provider for context information which needs to
     be passed to the extension points. The strategy allows to hooking in custom executors,
     extension resolver and reporting context.
 </p>
-<h3>
-    <a name="Executors"></a>Executors<a href="#Executors" ></a></h3>
+<h3>Executors</h3>
 <p>
     Executors are responsible for executing extension points on extensions and the behaviors
     attached to it. Different executors can be used for the startup and shutdown phase
     of the application.
 </p>
-<h3>
-    <a name="Core_behaviors"></a>Core behaviors<a href="#Core_behaviors" ></a></h3>
+<h3>Core behaviors</h3>
 <p>
     The bootstrapper package ships with some core behaviors which can be plugged into
     your bootstrapping mechanism. Core behaviors include
@@ -98,16 +89,13 @@ navigation:
         <li>Support to automatically dispose extensions which implement IDisposable </li>
     </ul>
 </p>
-<h3>
-    <a name="Reporting"></a>Reporting<a href="#Reporting" ></a></h3>
+<h3>Reporting</h3>
 <p>
     The bootstrapper records the bootstrapping process and allows reporting the whole
     process to a reporter. This can be used to automatically generate architecture and
     design documents which describe the bootstrapping mechanism.
 </p>
-<h2>
-    <a name="Further_Information"></a>Further Information<a href="#Further_Information"
-        ></a></h2>
+<h2>Further Information</h2>
 <p>
     Code samples: See sample project and unit tests in code for more samples.
 </p>
