--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@ title: Documentation
 
 		<hr />
 
-		<h2 class="page-subdescription">It is designed well if it can be removed easily.</h2>
+		<h2 class="page-subdescription"><strong>It is designed well </strong>if it can be removed easily.</h2>
 		
 	</header><!-- end .page-header -->
 <p>
@@ -17,9 +17,7 @@ All components provided by Appccelerate were design in a way so that your code w
 <p>
 The fundamental design rule behind Appccelerate is:
 </p>
-<p>
-<strong>It is designed well if it can be removed easily.</strong>
-</p>
+<p class="success">It is designed well if it can be removed easily.</p>
 <p>
 Please take a look at the documentation of the individual components in the menu above.
 </p>
