--- a/evaluationengine.html
+++ b/evaluationengine.html
@@ -57,7 +57,7 @@ if (evaluationEngine.Answer(new MyQuestion()))
 
 <h2>Features</h2>
 <p>
-    <ul>
+    <ul class="check dotted">
         <li>The evaluation engine provides a single entry point to ask questions (queries, calculations, ...)</li>
         <li>Questioner is completely decoupled from answer finding algorithm.</li>
         <li>Hierarchical evaluation engines (children inherit knowledge from parent)</li>
