--- a/eventbroker.html
+++ b/eventbroker.html
@@ -56,7 +56,7 @@ The event broker of Appccelerate solves these problems for you.
 
 <h2>Features</h2>
 <p>
-    <ul>
+    <ul class="check dotted">
         <li>Synchronous and asynchronous notifications</li>
         <li>Automatic thread switching: to background or UI thread</li>
         <li>Loose coupling of event topic publishers and subscribers</li>
