--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@ layout: default
 title: Home
 ---
 
-	<h2 class="slogan align-center">Accelerates your .Net Application development<br />
+	<h2 class="slogan align-center">Appccelerates your .Net Application development<br />
 	Based upon real world experience.</h2>
 	
-	<h6 class="section-title">Latest accelerators</h6>
+	<h6 class="section-title">Appccelerators</h6>
 
 	<ul class="projects-carousel clearfix">
 
 		<li>
-			<a href="">
-				<img src="img/placeholders/portfolio-project-4th-1.jpg" alt="">
+			<a href="bootstrapper.html">
+				<img src="img/placeholders/portfolio-project-4th-1.jpg" alt="Bootstrapper">
 				<h5 class="title">Bootstrapper</h5>
 				<span class="categories">Boostrapper</span>
 			</a>
@@ -20,7 +20,7 @@ title: Home
 
         <li>
 			<a href="eventbroker.html">
-				<img src="img/eventbroker_220_140.png" alt="">
+				<img src="img/eventbroker_220_140.png" alt="Event Broker">
 				<h5 class="title">Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
@@ -28,23 +28,23 @@ title: Home
 		
 		<li>
 			<a href="statemachine.html">
-				<img src="img/statemachine_220_140.png" alt="">
+				<img src="img/statemachine_220_140.png" alt="State Machine">
 				<h5 class="title">State Machine</h5>
 				<span class="categories">State Machine</span>
 			</a>
 		</li>
 
 		<li>
-			<a href="">
-				<img src="img/placeholders/portfolio-project-4th-3.jpg" alt="">
+			<a href="distributedeventbroker.html">
+				<img src="img/placeholders/portfolio-project-4th-3.jpg" alt="Distributed Event Broker">
 				<h5 class="title">Distributed Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
 		</li>
 
 		<li>
-			<a href="">
-				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="">
+			<a href="mappingeventbroker.html">
+				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="Mapping Event Broker">
 				<h5 class="title">Mapping Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
@@ -52,7 +52,7 @@ title: Home
 
 		<li>
 			<a href="evaluationengine.html">
-				<img src="img/evaluationengine_220_140.png" alt="">
+				<img src="img/evaluationengine_220_140.png" alt="Evaluation Engine">
 				<h5 class="title">Evaluation Engine</h5>
 				<span class="categories">Evalution Engine</span>
 			</a>
