--- a/statemachine.html
+++ b/statemachine.html
@@ -38,7 +38,7 @@ This reduces complexity and needed effort dramatically. See for yourself.
 
 <h2>Features</h2>
 <p>
-    <ul>
+    <ul class="check dotted">
         <li>use enums, ints or strings for states and events - resulting in single class state machines.</li>
         <li>transition, entry and exit actions.</li>
         <li>transition guards</li>
@@ -49,7 +49,6 @@ This reduces complexity and needed effort dramatically. See for yourself.
         <li>extension support to extend functionality of state machine.</li>
         <li>extensible thorough logging simplifies debugging.</li>
         <li>state machine reports as text, csv or yEd diagram.</li>
-    
     </ul>
 </p>
 
