Provided download links on homepage. Home site is now beautified.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,109 @@
 layout: default
 title: Home
 ---
-
 	<h2 class="slogan align-center">Appccelerates your .Net Application development<br />
 	Based upon real world experience.</h2>
+	<section id="features-slider" class="ss-slider">
+	
+		<article class="slide">
+		
+			<img src="img/provenquality.jpg" alt="Proven quality" class="slide-bg-image" />
+			
+			<div class="slide-button">
+				<span class="dropcap">1</span>
+				<h5>Proven quality</h5>
+				<span class="description">No buzz ware!</span>
+			</div>
+		
+			<div class="slide-content">
+				<h2>Proven quality</h2>
+				<p>Appccelerators are developed and used in real world applications.</p>
+				<p><a class="button" href="#getit">Get it!</a></p>
+			</div>
+			
+		</article><!-- end .slide (Proven quality) -->
+	
+		<article class="slide">
+		
+			<img src="img/looslycoupled.jpg" alt="Loosly coupled" class="slide-bg-image" />
+			
+			<div class="slide-button">
+				<span class="dropcap">2</span>
+				<h5>Loosly coupled</h5>
+				<span class="description">Interface segregation!</span>
+			</div>
+		
+			<div class="slide-content">
+				<h2>Loosly coupled</h2>
+				<p>Appccelerators use interface segration to decouple your application code.</p>
+				<p><a class="button" href="#getit">Get it!</a></p>
+			</div>
+			
+		</article><!-- end .slide (Loosly coupled) -->
+	
+		<article class="slide">
+		
+			<img src="img/easytotest.jpg" alt="Easy to test" class="slide-bg-image" />
+		
+			<div class="slide-button">		
+				<span class="dropcap">3</span>
+				<h5>Easy to test</h5>
+				<span class="description">Developed test first!</span>
+			</div>
+			
+			<div class="slide-content">
+				<h2>Easy to test</h2>
+				<p>Appccelerators are developed test first and offer various toolkits to simplify testing.</p>
+				<p><a class="button" href="#getit">Get it!</a></p>
+			</div>
+			
+		</article><!-- end .slide (Easy to test) -->
+	
+		<article class="slide">
+		
+			<img src="img/easytoextend.jpg" alt="Easy to extend" class="slide-bg-image" />
+		
+			<div class="slide-button">
+				<span class="dropcap">4</span>
+				<h5>Easy to extend</h5>
+				<span class="description">Customize it!</span>
+			</div>
+			
+			<div class="slide-content">
+				<h2>Easy to extend</h2>
+				<p>Appccelerators follow proven industry standards and are open for extension but closed for modification.</p>
+				<p><a class="button" href="#getit">Get it!</a></p>
+			</div>
+			
+		</article><!-- end .slide (Easy to extend) -->
+			
+	</section><!-- end #features-slider -->
+	
+	<h6 class="section-title"><a name="getit"></a>Grab the latest appccelerators from</h6>
+	
+	<div class="one-half">
+		<h4>Nuget.org</h4>
+		<div class="infobox">
+
+			<h4>Nuget is a Visual Studio Extension which makes the installation of appccelerators a snap.</h4>
+
+			<p><a class="button" href="http://www.nuget.org/packages?q=Appccelerate">Get it, I want convenience!</a></p>
+
+		</div><!-- end .infobox -->
+		
+	</div><!-- end .one-half -->
+	
+	<div class="one-half last">
+		<h4>Codebetter.com</h4>
+		<div class="infobox">
+
+			<h4>Codebetter hosts appccelerators on their TeamCity server. This is alpha geek stuff.</h4>
+
+			<p><a class="button" href="http://teamcity.codebetter.com/project.html?projectId=project118">Get it, I'm an alpha geek!</a></p>
+
+		</div><!-- end .infobox -->
+		
+	</div><!-- end .one-half.last -->
 	
 	<h6 class="section-title">Appccelerators</h6>
 
