--- a/statemachine.html
+++ b/statemachine.html
@@ -11,6 +11,8 @@ navigation:
      link: statemachinepassivestatemachine.html
    - name: Active State Machine
      link: statemachineactivestatemachine.html
+   - name: Actions
+     link: statemachineactions.html
    - name: Hierarchical Transitions
      link: statemachinehierarchicaltransitions.html
    - name: Exception Handling
@@ -84,7 +86,7 @@ This reduces complexity and needed effort dramatically. See for yourself.
     You can define per state and event which transition is taken and therefore which state to go to.
 </p>
 
-<h3>Actions</h3>
+<h3><a href="statemachineactions.html">Actions</a></h3>
 <p>
     You can define actions either on transitions or on entry or exit of a state.
     Transition actions are executed when the transition is taken as response to an event.
