--- a/statemachinereports.html
+++ b/statemachinereports.html
@@ -11,6 +11,8 @@ navigation:
      link: statemachinepassivestatemachine.html
    - name: Active State Machine
      link: statemachineactivestatemachine.html
+   - name: Actions
+     link: statemachineactions.html
    - name: Hierarchical Transitions
      link: statemachinehierarchicaltransitions.html
    - name: Exception Handling
