added QA documentation

--- a/documentation.html
+++ b/documentation.html
@@ -18,6 +18,27 @@ All components provided by Appccelerate were design in a way so that your code w
 The fundamental design rule behind Appccelerate is:
 </p>
 <p class="success">It is designed well if it can be removed easily.</p>
+
+<h3>Quality Matters</h3>
+<p>
+All code newly added to Appccelerate, is implemented using Acceptance Test Driven Development and Test Driven Development.
+This guarantees easy to use APIs and a high level of quality (check out our issue tracker on github!).
+</p>
+<p>
+We use the following measures for quality assurance:
+<ul>
+  <li>ATTD and TDD to develop code.</li>
+  <li>StyleCop to check our code for readability so that bugs can't hide.</li>
+  <li>Code Analysis/FxCop to check our code for potential design, localization, performance, and security problems.</li>
+  <li>Continuous Integration and Packaging using TeamCity, NAnt, Nuget.</li>
+  <li>Code coverage to spot weak points after refactoring of code.</li>
+  <li>Restructure101 to keep our code without tanggles. (Thanks to Headway Software for providing Urs a license)</li>
+  <li>NCover to check our code for structural problems. (Thanks to Patrick Smacchia for providing Urs a license)</li>
+</ul>
+</p>
+
+<hr/>
+
 <p>
 Please take a look at the documentation of the individual components in the menu above.
 </p>
