Replaced place holder images

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ title: Home
 
 		<li>
 			<a href="bootstrapper.html">
-				<img src="img/placeholders/portfolio-project-4th-1.jpg" alt="Bootstrapper">
+				<img src="img/bootstrapper_220_140.png" alt="Bootstrapper">
 				<h5 class="title">Bootstrapper</h5>
 				<span class="categories">Boostrapper</span>
 			</a>
@@ -136,7 +136,7 @@ title: Home
 
 		<li>
 			<a href="distributedeventbroker.html">
-				<img src="img/placeholders/portfolio-project-4th-3.jpg" alt="Distributed Event Broker">
+				<img src="img/eventbroker_220_140.png" alt="Distributed Event Broker">
 				<h5 class="title">Distributed Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
@@ -144,7 +144,7 @@ title: Home
 
 		<li>
 			<a href="mappingeventbroker.html">
-				<img src="img/placeholders/portfolio-project-4th-4.jpg" alt="Mapping Event Broker">
+				<img src="img/eventbroker_220_140.png" alt="Mapping Event Broker">
 				<h5 class="title">Mapping Event Broker</h5>
 				<span class="categories">Event Broker</span>
 			</a>
