Extended roadmap for bootstrapper

--- a/roadmap.html
+++ b/roadmap.html
@@ -14,6 +14,7 @@ These are the features we're up to in the future:
   <li>AsyncModule: Rewrite to make it easier to use and better testable, once .Net 4.5 is released.</li>
   <li>Bootstrapper: client/server extension support</li>
   <li>Bootstrapper: serviceinstaller</li>
+  <li>Bootstrapper: console argument support</li>
   <li>EventBroker: support simplified handler method signatures (no need for sender or event args if they are not used).</li>
   <li>Feature, license and user permission management over the evaluation engine</li>
   <li>UI navigation for WPF and Web (URL based)</li>
