--- a/eventbrokerlogging.html
+++ b/eventbrokerlogging.html
@@ -52,7 +52,7 @@ eventBroker.AddExtension(new Log4Net.EventBrokerLogExtension("my.logger.name"));
 ]]></script>
 
 
-<h3>custom logging</h3>
+<h3>Custom Logging</h3>
 <p>
 If you want to change either the logging framework or what and how is logged then you can write your own logging extension.
 See <a href="eventbrokerextensions.html">extensions</a> on how to implement an extension.
