--- a/legalnotice.html
+++ b/legalnotice.html
@@ -7,4 +7,6 @@ title: Legal Notice
 		<h1 class="page-title align-left">Terms of appcceleration</h1>
 	
 	</header><!-- end .page-header -->
+	
+	<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Appccelerate Web Site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="www.appccelerate.com" property="cc:attributionName" rel="cc:attributionURL">Appccelerate</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.<br />Permissions beyond the scope of this license may be available at <a xmlns:cc="http://creativecommons.org/ns#" href="https://raw.github.com/appccelerate/appccelerate.github.com/master/LICENSE" rel="cc:morePermissions">https://raw.github.com/appccelerate/appccelerate.github.com/master/LICENSE</a>.
 
