Fixed minor typo on donators page

--- a/donators.html
+++ b/donators.html
@@ -18,7 +18,7 @@ title: Donators
 
 	<div class="container clearfix">
 			<h3>Contact Info</h3>
-			<p>bbv Software Services Ag<br/>
+			<p>bbv Software Services AG<br/>
 			Blumenrain 10, 6002 Luzern<br/>
 			Switzerland</p>
 
