--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Home
 			
 			<div class="slide-button">
 				<span class="dropcap">2</span>
-				<h5>Loosly coupled</h5>
+				<h5>Loosely coupled</h5>
 				<span class="description">Interface segregation!</span>
 			</div>
 		
