--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ title: Home
 			</div>
 		
 			<div class="slide-content">
-				<h2>Loosly coupled</h2>
-				<p>Appccelerators use interface segration to decouple your application code.</p>
+				<h2>Loosely coupled</h2>
+				<p>Appccelerators use interface segregation to decouple your application code.</p>
 				<p><a class="button" href="#getit">Get it!</a></p>
 			</div>
 			
