Updated links to point to teamcity.bbv.ch

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Home
 	<h6 class="section-title"><a name="getit"></a>Grab the latest appccelerators from</h6>
 	
 	<div class="one-half">
-		<h4>Nuget.org</h4>
+		<h4>Official release packages on Nuget.org</h4>
 		<div class="infobox">
 
 			<h4>Nuget is a Visual Studio Extension which makes the installation of appccelerators a snap.</h4>
@@ -95,13 +95,16 @@ title: Home
 	</div><!-- end .one-half -->
 	
 	<div class="one-half last">
-		<h4>Codebetter.com</h4>
+		<h4>Alpha packages NuGet feed</h4>
 		<div class="infobox">
 
-			<h4>Codebetter hosts appccelerators on their TeamCity server. This is alpha geek stuff.</h4>
+			<h4>bbv Software Services hosts appccelerators on their TeamCity server. This is alpha geek stuff.</h4>
 
-			<p><a class="button" href="http://teamcity.codebetter.com/project.html?projectId=project118">Get it, I'm an alpha geek!</a></p>
-
+			<p>
+			<a class="button" href="https://teamcity.bbv.ch/viewType.html?buildTypeId=bt4&tab=buildTypeStatusDiv">TeamCity project overview.</a> Log-in as guest.			
+			</p>
+			NuGet package feed URL: https://teamcity.bbv.ch/guestAuth/app/nuget/v1/FeedService.svc
+						
 		</div><!-- end .infobox -->
 		
 	</div><!-- end .one-half.last -->
