StateMachine: fixed syntax error in sample due to changed exit action definition syntax

--- a/statemachinesample.html
+++ b/statemachinesample.html
@@ -62,7 +62,8 @@ elevator.In(States.Error)
 
 elevator.In(States.OnFloor)
     .ExecuteOnEntry(this.AnnounceFloor)
-    .ExecuteOnExit(Beep, Beep)
+    .ExecuteOnExit(Beep)
+	.ExecuteOnExit(Beep)
     .On(Events.CloseDoor).Goto(States.DoorClosed)
     .On(Events.OpenDoor).Goto(States.DoorOpen)
     .On(Events.GoUp)
