Added ndepend and also sponsors on front page

--- a/donators.html
+++ b/donators.html
@@ -16,7 +16,7 @@ title: Donators
 		<p class="container">Something went wrong... Try to enable your JavaScript!</p>
 	</section><!-- end #map -->
 
-	<div class="container clearfix">
+	<div class="container clearfix one-half">
 			<h3>Contact Info</h3>
 			<p>bbv Software Services AG<br/>
 			Blumenrain 10, 6002 Luzern<br/>
@@ -27,4 +27,9 @@ title: Donators
 				Web: <a href="http://www.bbv.ch">bbv.ch</a></p>
 		
 		
+	</div><!-- end .container -->
+	
+	<div class="container clearfix last-half">
+			<h3>License Sponsors</h3>
+			<p><a href="http://www.ndepend.com"><img src="img/NDependLogo_PoweredBy.PNG"" /></a></p>
 	</div><!-- end .container -->
