--- a/index.html
+++ b/index.html
@@ -178,3 +178,13 @@ title: Home
 		</li>
 
 	</ul><!-- end .projects-carousel -->
+	
+	<h6 class="section-title">Donators</h6>
+	
+	<div class="container clearfix one-half">
+		<a href="http://www.bbv.ch" target="_blank" ><img src="img/bbv_ag.jpg" /></a>
+	</div><!-- end .container -->
+	
+	<div class="container clearfix last-half">
+		<a href="http://www.ndepend.com" target="_blank"><img src="img/NDependLogo_PoweredBy.PNG" /></a>
+	</div><!-- end .container -->
