Added motivation for scoping event broker

--- a/scopingeventbroker.html
+++ b/scopingeventbroker.html
@@ -7,8 +7,13 @@ navigation:
      link: scopingeventbrokertutorial.html	 		 
 ---
 <h2>Motivation</h2>
-<p>TODO.</p>
+<p>You need to fire event broker events while saving some data into a database or another transactional system? You might be tempted to think that is a no-brainer. But consider this question: What happens when i.ex. a concurrency conflict occurs and the database transactions is rolled back? Normally your events would already be fired on the event broker. The scoping event broker handles does kind of scenarios and makes your event broker instances aware of transactions for asynchronous events. Therefore if you rollback your database, the events will never be fired!</p>
 <h2>Features</h2>
 <ul class="check dotted">
 	<li>TODO</li>
 </ul>
+<p>For basic usage please see <a href=
+"eventbroker.html">Event Broker</a> and <a href=
+"eventbrokertutorial.html">Event Broker
+Tutorial</a>
+</p>
