--- a/scopingeventbroker.html
+++ b/scopingeventbroker.html
@@ -4,7 +4,13 @@ title: Scoping Event Broker
 teaser: Appccelerate your asynchronous events by scoping it
 navigation:
    - name: Tutorial
-     link: scopingeventbrokertutorial.html	 		 
+     link: scopingeventbrokertutorial.html	 	
+   - name: Unit Of Work
+     link: scopingeventbrokerunitofwork.html	 
+   - name: Transaction Scope
+     link: scopingeventbrokertransactionscope.html	  
+   - name: Restrictions
+     link: scopingeventbrokerrestrictions.html	 	 
 ---
 <h2>Motivation</h2>
 <p>You need to fire event broker events while saving some data into a database or another transactional system? You might be tempted to think that is a no-brainer. But consider this question: What happens when i.ex. a concurrency conflict occurs and the database transactions is rolled back? Normally your events would already be fired on the event broker. The scoping event broker handles does kind of scenarios and makes your event broker instances aware of transactions for asynchronous events. Therefore if you rollback your database, the events will never be fired!</p>
