Aligned bootstrapper menu with event broker

--- a/bootstrapper.html
+++ b/bootstrapper.html
@@ -3,6 +3,8 @@ layout: documentation
 title: Bootstrapper 
 teaser: Appccelerates your application bootstrapping mechanism
 navigation:
+   - name: Overview
+     link: bootstrapper.html	
    - name: Tutorial
      link: bootstrappertutorial.html	 
    - name: Configuration Sections
