--- a/bootstrapperconfigurationsections.html
+++ b/bootstrapperconfigurationsections.html
@@ -3,6 +3,8 @@ layout: documentation
 title: Bootstrapper 
 teaser: Appccelerates your application bootstrapping mechanism
 navigation:
+   - name: Overview
+     link: bootstrapper.html	
    - name: Tutorial
      link: bootstrappertutorial.html	 
    - name: Configuration Sections
