--- a/distributedeventbrokerscoping.html
+++ b/distributedeventbrokerscoping.html
@@ -3,6 +3,8 @@ layout: documentation
 title: Distributed Event Broker 
 teaser: Appccelerates your local event broker until it fires over process boundaries
 navigation:
+   - name: Overview
+     link: distributedeventbroker.html	 
    - name: Tutorial
      link: distributedeventbrokertutorial.html	 
    - name: Transports
